--- a/upload-services.html
+++ b/upload-services.html
@@ -45,7 +45,7 @@
         <!-- Navbar Start -->
         <div class="container-fluid nav-bar bg-transparent">
             <nav class="navbar navbar-expand-lg bg-white navbar-light py-0 px-4">
-                <a href="home.html" class="navbar-brand d-flex align-items-center text-center">
+                <a href="index.html" class="navbar-brand d-flex align-items-center text-center">
                     <div class="icon p-2 me-2">
                         <img class="img-fluid" src="img/Sitelogo.png" alt="Icon" style="width: 40px; height: 40px;">
                     </div>
@@ -56,7 +56,7 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <div class="navbar-nav ms-auto">
-                        <a href="home.html" class="nav-item nav-link">Home</a>
+                        <a href="index.html" class="nav-item nav-link">Home</a>
                         <!-- <a href="about.html" class="nav-item nav-link">About</a> -->
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Jobs</a>
@@ -91,7 +91,7 @@
                     <h1 class="display-5 animated fadeIn mb-4">Upload Services</h1> 
                         <nav aria-label="breadcrumb animated fadeIn">
                         <ol class="breadcrumb text-uppercase">
-                            <li class="breadcrumb-item"><a href="home.html">Home</a></li>
+                            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
                             <li class="breadcrumb-item"><a>Services</a></li>
                             <li class="breadcrumb-item text-body active" aria-current="page">Upload Services</li>
                         </ol>
@@ -269,7 +269,7 @@
                     </div>
                     <div class="col-lg-3 col-md-6">
                         <h5 class="text-white mb-4">Quick Links</h5>
-                        <a class="btn btn-link text-white-50" href="home.html">Home</a>
+                        <a class="btn btn-link text-white-50" href="index.html">Home</a>
                         <a class="btn btn-link text-white-50" href="search-job.html">Jobs</a>
                         <a class="btn btn-link text-white-50" href="search-services.html">Services</a>
                         <!-- <a class="btn btn-link text-white-50" href="">Privacy Policy</a> -->
@@ -312,11 +312,11 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="border-bottom" href="home.html">ROZZGARI</a>, All Right Reserved. Designed By <a class="border-bottom" >Team_Syntax</a>
+                            &copy; <a class="border-bottom" href="index.html">ROZZGARI</a>, All Right Reserved. Designed By <a class="border-bottom" >Team_Syntax</a>
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
-                                <a href="home.html">Home</a>
+                                <a href="index.html">Home</a>
                                 <a href="">Help</a>
                                 <a href="">FQAs</a>
                             </div>
